--- a/styles.css
+++ b/styles.css
@@ -147,6 +147,8 @@ li a{
 
 
 .Popular_Dishes_Content{
+    /* display: grid;
+    place-items: center; */
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -159,7 +161,7 @@ li a{
     font-family: 'Roboto Condensed';
     font-style: normal;
     font-weight: 900;
-    font-size: 65px;
+    font-size: 3vw;
     line-height: 76px;
     display: flex;
     align-items: center;
@@ -187,10 +189,11 @@ text-transform: capitalize;
 color: var(--lightGrey);
 }
 .Popular_Dishes_Content .dishes{
-    display: flex;
-    flex-direction: column;
+    display: grid;
+
+    /* flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: center; */
     padding: 0px;
     gap: 67.5px;
 }
@@ -264,18 +267,20 @@ color: var(--lightGrey);
 
 
 .Instagram{
-    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 30px;
     padding-bottom: 30px;
 }
 .Instagram_Handle{
     display: flex; 
-    justify-content: center; 
+    justify-content: space-between; 
     align-items: center;
-    gap: 10px;
 }
 .Instagram_Handle svg{
-    width: 37.63px;
-    height: 37.63px;
+    /* width: 37.63px;
+    height: 37.63px; */
 }
 .Instagram_Handle li{
     display: inline-block;
@@ -284,27 +289,20 @@ color: var(--lightGrey);
     font-family: 'Roboto Slab';
     font-style: normal;
     font-weight: 900;
-    font-size: 30.1045px;
-    text-transform: lowercase;
+    font-size: 2vw;
+    /* text-transform: lowercase; */
     color: var(--darkBlue);
 }
 .Instagram .photos{
-    display: flex;
+    display: grid;
+    place-items: center;
+    /* display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    flex-wrap: wrap;
+    align-items: center; */
     padding: 0px 5.16306px;
-    gap: 29.27px;
-}
-.photos .row{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    padding: 0px;
-    gap: 30px;
-    width: 1312.06px;
-    height: 426.48px;
+    gap: 32.27px;
 }
 .photos img{
     width: 425.95px;
@@ -318,20 +316,32 @@ color: var(--lightGrey);
     color: var(--lightColor);
     font-family: 'Roboto Slab';
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
     padding: 30px;
 }
 .Location #map, .Location .description{
     width: 50%;
 }
 .Location h1{
-    font-size: 54px;
+    font-size: 69px;
 }
 .Location h2{
-    font-size: 28px;
+    font-size: 35px;
+    font-weight: 700;
+    text-decoration: underline;
 }
-.Location table{
-    width: 100%;
+.Location p{
+    font-size: 35px;
+}
+/* boot strap */
+h1{
+    margin-top: 50px;
+}
+p{
+    margin: 0;
 }
 .Location button{
     width: 183.38px;
@@ -352,3 +362,34 @@ color: var(--lightGrey);
     text-align: center;
     text-transform: uppercase;
 }
+/* #map{
+    height: 100px;
+    width: 100%;
+} */
+
+/* mobile responsiveness */
+@media only screen and (min-width: 1010px) {
+    .navmobile{
+        display: none;
+    }
+}
+@media only screen and (max-width: 1010px) {
+    .navdesktop{
+        display: none;
+    }
+}
+@media only screen and(min-width: 300px) {
+    .dishes { grid-template-columns: repeat(1, 1fr); }
+    .photos { grid-template-columns: repeat(1, 1fr); }
+}
+
+@media (min-width: 800px) {
+    .dishes { grid-template-columns: repeat(2, 1fr); }
+    .photos { grid-template-columns: repeat(2, 1fr); }
+}
+@media (min-width: 1400px) {
+  .dishes { grid-template-columns: repeat(3, 1fr); }
+  .photos { grid-template-columns: repeat(3, 1fr); }
+}
+/* change width of items 
+    fonts with 
