--- a/styles.css
+++ b/styles.css
@@ -90,17 +90,33 @@ li a{
 
 
 
-.Landing_Page_Content{
+/* .Landing_Page_Content{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center left, center right;
     padding: 0px;
     background: linear-gradient(0deg, rgba(0, 0, 0, 0.59), rgba(0, 0, 0, 0.59)), url('nhatrangImg/nha-trang-inside.jfif');
     background-size: cover;
     height: 100vh;
     gap: 44.32px;
-}
+} */
+.Landing_Page_Content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    padding: 0px;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.59), rgba(0, 0, 0, 0.59)), url('nhatrangImg/nha-trang-inside.jfif') center/cover no-repeat;
+    height: 100vh;
+    gap: 44.32px;
+  }
 .Landing_Page_Content .main_logo{
     width: 367.53px;
     height: 306.31px;
@@ -389,12 +405,12 @@ footer ul{
     background-color: black;
     border-radius: 10px;
 }
-@media only screen and (min-width: 1010px) {
+@media only screen and (min-width: 1170px) {
     #toggle{
         display: none;
     }
 }
-@media only screen and (max-width: 1010px) {
+@media only screen and (max-width: 1170px) {
     #toggle{
         display: flex;
     }
@@ -403,7 +419,9 @@ footer ul{
         justify-content: center;
         align-items: center;
         flex-direction: column;
-        height: 100px;
+        /* height: 100px; */
+        padding-top: 20px;
+        padding-bottom: 20px;
     }
     nav h1{
         font-size: 66px;
@@ -435,15 +453,18 @@ footer ul{
         display: flex;
         padding-top: 50px;
         padding-bottom: 50px;
-        justify-content: space-around;
+        justify-content: center;
+        gap: 230px;
+        margin-bottom: 300px;
     }
     .active li{
         padding-bottom: 20px;
     }
     .active li a{
-        font-size: 33px;
+        font-size: 63px;
     }
 }
+/* @media (min-width:  */
 @media only screen and(min-width: 300px) {
     .dishes { grid-template-columns: repeat(1, 1fr); }
     .photos { grid-template-columns: repeat(1, 1fr); }
