--- a/styles.css
+++ b/styles.css
@@ -112,6 +112,7 @@ li a{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
     width: 100%;
     height: 100%;
     padding: 0px;
@@ -422,16 +423,16 @@ footer ul{
         align-items: center;
         flex-direction: column;
         /* height: 100px; */
-        padding-top: 20px;
-        padding-bottom: 20px;
+        padding-top: 10px;
+        padding-bottom: 10px;
     }
     nav h1{
-        font-size: 66px;
+        font-size: 32px;
     }
     #toggle{
         position: absolute;
-        top: 34px;
-        right: 1.75rem;
+        top: 23px;
+        right: 1.5rem;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
@@ -456,7 +457,7 @@ footer ul{
         padding-top: 50px;
         padding-bottom: 50px;
         justify-content: center;
-        gap: 190px;
+        gap: 50px;
     }
 
     /* create the X for the bars */
@@ -475,13 +476,27 @@ footer ul{
         padding-bottom: 20px;
     }
     .active li a{
-        font-size: 63px;
+        font-size: 45px;
     }
     .active li a button{
         height: 90px;
         width: 300px;
         font-size: 36px;
         border-radius: 20px;
+    }
+
+    .Landing_Page_Content h1{
+        font-size: 30px;
+        justify-content: center;
+    }
+
+    .Location h1 {
+        font-size: 38px;
+        font-weight: 700;
+    }
+    
+    .Location h2, .Location p {
+        font-size: 18px;
     }
 }
 /* @media (min-width:  */
