--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 :root{
     --lightColor: #FAFAFB;
-    --darkBlue: #182353;
+    --darkBlue: #0C1837;
     --white: #ffffff;
-    --primaryRed: #C94040;
+    --primaryRed: #CC3030;
     --darkGrey: #2C2726;
     --lightGrey: #3D3A39;
 }
