--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,6 @@
 :root{
-    --lightColor: #FAFAFB;
+    --lightColor: #EEF7FC;
     --darkBlue: #0C1837;
-    --white: #ffffff;
     --primaryRed: #CC3030;
     --darkGrey: #2C2726;
     --lightGrey: #3D3A39;
@@ -79,7 +78,7 @@ li a{
     height: 39px;
     text-align: center;
     background: var(--primaryRed);
-    color: var(--white);
+    color: var(--lightColor);
     cursor: pointer;
     border: 0px;
     border-radius: 2px;
@@ -154,7 +153,7 @@ li a{
     height: 65px;
     text-align: center;
     background-color: var(--primaryRed);
-    color: var(--white);
+    color: var(--lightColor);
     cursor: pointer;
     border: 0px;
     border-radius: 2px;
@@ -178,15 +177,15 @@ li a{
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    padding: 0px 0px 56.25px;
-    gap: 56.25px;
+    padding: 0px 0px 70px;
+    gap: 50px;
     background-color: var(--darkBlue);
 }
 .Popular_Dishes_Content h1{
     font-family: 'Roboto Condensed';
     font-style: normal;
     font-weight: 900;
-    font-size: 3rem;
+    font-size: 4rem;
     line-height: 76px;
     display: flex;
     align-items: center;
@@ -269,7 +268,7 @@ li a{
     height: 67.21px;
     text-align: center;
     background-color: var(--primaryRed);
-    color: var(--white);
+    color: var(--lightColor);
     cursor: pointer;
     border: 0px;
     border-radius: 2px;
